--- a/www/guis/admin/public/templates/default/css/global.css
+++ b/www/guis/admin/public/templates/default/css/global.css
@@ -14,7 +14,7 @@ html, body {
     border: 0;
     font-family:  Arial;
     font-weight: normal;
-    font-size: 0.85em;
+    font-size: 1em;
     background-color: #FCFCFC;
     color: #363636;
 }
